--- a/study-record-t2a.html
+++ b/study-record-t2a.html
@@ -135,73 +135,73 @@ $(document).ready(function(){
         <tr>
           <td><a href="#">A218 Medicine and society in Europe 1500-1930</a></td>
           <td>2014</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">K319 Adulthood, ageing and the life course</a></td>
           <td>2013</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">KE312 Working together for children</a></td>
           <td>2013</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">K218 Working with children, young people and families</a></td>
           <td>2012</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">K101 An introduction to health and social care</a></td>
           <td>2011</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">SA188 Archaeology: the science of investigation</a></td>
           <td>2009</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">SA188 Archaeology: the science of investigation</a></td>
           <td>2009</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">A219 Exploring the classical world</a></td>
           <td>2008</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">A177 Shakespeare: an introduction</a></td>
           <td>2007</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">AT272 Ancient and medieval cities: a technological history</a></td>
           <td>2007</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">S193 Fossils and the history of life</a></td>
           <td>2006</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">S193 Fossils and the history of life</a></td>
           <td>2006</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">A103 An introduction to the humanities</a></td>
           <td>2005</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
         <tr>
           <td><a href="#">A178 Perspectives on Leonardo da Vinci</a></td>
           <td>2005</td>
-          <td>&nbsp;</td>
-        </tr>
+          <td>Pass</td>
+          </tr>
     </table>
       <h3>Cancelled modules</h3>
       <table>
@@ -212,10 +212,8 @@ $(document).ready(function(){
 
       <p class="pdf-download">Your <a href="#">Student Academic Summary</a> is available as a PDF download, and contains a summary of your modules and qualifications.</p>
 
-    </div>
-    <!-- end box-qual-inner -->
-  </div>
-  <!-- end box-qual -->
+    </div><!-- end box-qual-inner -->
+  </div><!-- end box-qual -->
 
 
 <div class="box-qual collapsed">
